rama-ssl agrego primer commint

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,14 +33,26 @@ http {
     add_header X-Frame-Options SAMEORIGIN;
     add_header X-XSS-Protection "1; mode=block";
 
-  server {
-      server_name ticsalud.cl
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-      charset utf-8;
-
-
-
-  }
+server {
+    listen 80;
+    server_name ticsalud.cl;
+    location / {
+        return 301 https://$host$request_uri;
+    }    
+}
+server {
+    listen 443 ssl;
+    server_name ticsalud.cl;
+    ssl_certificate /etc/letsencrypt/live/ticsalud.cl/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ticsalud.cl/privkey.pem;
+    
+    location / {
+        proxy_pass http://ticsalud.cl; #for demo purposes
+    }
+}
 
 }
 
