--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,17 @@
-version: "3"
+version: "3.4"
 
 services:
-    client:
-        image: nginx
+    nginx:
+        build:
+            context: ./nginx
+            args:
+              - CERTBOT_EMAIL=contacto@ticsalud.cl #replace with your own email
+              - DOMAIN_LIST=ticsalud.cl, www.ticsalud.cl #replace with your own
+
         ports:
             - 80:80
+            - 443:443
         volumes:
             - ./src:/usr/share/nginx/html
-        build: ./nginx
+            - letsencrypt:/etc/letsencrypt
+        restart: always
