--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,7 +4,7 @@ RUN rm /etc/nginx/nginx.conf
 COPY nginx.conf /etc/nginx/
 
 ARG CERTBOT_EMAIL=contacto@ticsalud.cl
-ARG DOMAIN_LIST
+ARG DOMAIN_LIST=ticsalud.cl
 
 RUN  apt-get update \
       && apt-get install -y cron certbot python-certbot-nginx bash wget \
