--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -6,13 +6,19 @@ COPY nginx.conf /etc/nginx/
 ARG CERTBOT_EMAIL=contacto@ticsalud.cl
 ARG DOMAIN_LIST=ticsalud.cl
 
-RUN  apt-get update \
-      && apt-get install -y cron certbot python-certbot-nginx bash wget \
-      && certbot certonly --standalone --agree-tos -m "${CERTBOT_EMAIL}" -n -d ${DOMAIN_LIST} \
-      && rm -rf /var/lib/apt/lists/* \
-      && echo "PATH=$PATH" > /etc/cron.d/certbot-renew  \
-      && echo "@monthly certbot renew --nginx >> /var/log/cron.log 2>&1" >>/etc/cron.d/certbot-renew \
-      && crontab /etc/cron.d/certbot-renew
+RUN  apt-get update
+
+RUN  apt-get install -y cron certbot python-certbot-nginx bash wget
+
+RUN  certbot certonly --standalone --agree-tos -m "${CERTBOT_EMAIL}" -n -d ${DOMAIN_LIST}
+
+RUN rm -rf /var/lib/apt/lists/*
+
+RUN echo "PATH=$PATH" > /etc/cron.d/certbot-renew
+
+RUN echo "@monthly certbot renew --nginx >> /var/log/cron.log 2>&1" >>/etc/cron.d/certbot-renew
+
+RUN crontab /etc/cron.d/certbot-renew
 
 
 
