--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,7 +4,7 @@ RUN rm /etc/nginx/nginx.conf
 COPY nginx.conf /etc/nginx/
 
 ARG CERTBOT_EMAIL=contacto@ticsalud.cl
-ARG DOMAIN_LIST=ticsalud.cl
+ARG DOMAIN_LIST=www.ticsalud.cl
 
 RUN  apt-get update
 
@@ -12,13 +12,13 @@ RUN  apt-get install -y cron certbot python-certbot-nginx bash wget
 
 RUN  certbot certonly --standalone --agree-tos -m "${CERTBOT_EMAIL}" -n -d ${DOMAIN_LIST}
 
-RUN rm -rf /var/lib/apt/lists/*
+RUN  rm -rf /var/lib/apt/lists/*
 
-RUN echo "PATH=$PATH" > /etc/cron.d/certbot-renew
+RUN  echo "PATH=$PATH" > /etc/cron.d/certbot-renew
 
-RUN echo "@monthly certbot renew --nginx >> /var/log/cron.log 2>&1" >>/etc/cron.d/certbot-renew
+RUN  echo "@monthly certbot renew --nginx >> /var/log/cron.log 2>&1" >> /etc/cron.d/certbot-renew
 
-RUN crontab /etc/cron.d/certbot-renew
+RUN  crontab /etc/cron.d/certbot-renew
 
 
 
