--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,19 +38,19 @@ http {
 
 server {
     listen 80;
-    server_name ticsalud.cl;
+    server_name www.ticsalud.cl ticsalud.cl;
     location / {
         return 301 https://$host$request_uri;
     }    
 }
 server {
     listen 443 ssl;
-    server_name ticsalud.cl;
+    server_name www.ticsalud.cl ticsalud.cl;
     ssl_certificate /etc/letsencrypt/live/ticsalud.cl/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/ticsalud.cl/privkey.pem;
     
     location / {
-        proxy_pass http://ticsalud.cl; #for demo purposes
+        proxy_pass http://www.ticsalud.cl; #for demo purposes
     }
 }
 
