--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,14 +3,14 @@ FROM nginx:stable
 RUN rm /etc/nginx/nginx.conf
 COPY nginx.conf /etc/nginx/
 
-ARG CERTBOT_EMAIL=atmoss22@hotmail.com
+ARG CERTBOT_EMAIL=contacto@ticsalud.cl
 ARG DOMAIN_LIST=www.ticsalud.cl
 
 RUN  apt-get update
 
 RUN  apt-get install -y cron certbot python-certbot-nginx bash wget
 
-RUN  certbot certonly --standalone --agree-tos -m "${CERTBOT_EMAIL}" -n -d ${DOMAIN_LIST}
+##RUN  certbot certonly --standalone --agree-tos -m "${CERTBOT_EMAIL}" -n -d ${DOMAIN_LIST}
 
 
 
