--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,8 +46,8 @@ server {
 server {
     listen 443 ssl;
     server_name www.ticsalud.cl ticsalud.cl;
-    ssl_certificate /etc/letsencrypt/live/ticsalud.cl/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ticsalud.cl/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/www.ticsalud.cl/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.ticsalud.cl/privkey.pem;
     
     location / {
         proxy_pass http://www.ticsalud.cl; #for demo purposes
