agrego server option www

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,13 +34,17 @@ http {
     add_header X-XSS-Protection "1; mode=block";
 
   server {
-      server_name ticsalud.cl
-
+      listen 80;
+      server_name ticsalud.cl;
+      return      301 http://www.ticsalud.cl$request_uri;
       charset utf-8;
-
-
-
   }
+  server {
+      listen 80;
+      server_name www.ticsalud.cl;
+      charset utf-8;
+  }
+
 
 }
 
