agrego server option www2

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,7 +36,7 @@ http {
   server {
       listen 80;
       server_name ticsalud.cl;
-      return      301 http://www.ticsalud.cl$request_uri;
+      #return      301 http://www.ticsalud.cl$request_uri;
       charset utf-8;
   }
   server {
