--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,6 +38,13 @@ http {
       server_name ticsalud.cl;
       #return      301 http://www.ticsalud.cl$request_uri;
       charset utf-8;
+
+      location / {
+          root   /usr/share/nginx/html;
+          index  index.html index.htm;
+      }
+
+
   }
 
 
