--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,16 +38,34 @@ http {
       server_name ticsalud.cl;
       #return      301 http://www.ticsalud.cl$request_uri;
       charset utf-8;
+      
+      location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+      }
 
       location / {
           root   /usr/share/nginx/html;
           index  index.html index.htm;
+          return 301 https://$host$request_uri;
+
       }
 
 
   }
+  server {
+     listen 443 ssl;
+     server_name ticsalud.cl;
+    
+     location / {
+         proxy_pass http://ticsalud.cl; #for demo purposes
+     }
+     
+     ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+     ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+     include /etc/letsencrypt/options-ssl-nginx.conf;
+     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-
+  }
 
 }
 
