--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   nginx:
-    image: nginx:1.21.0
+    image: nginx:1.15-alpine
     ports:
       - "80:80"
       - "443:443"
