agrego server option www13

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,8 +60,8 @@ http {
          proxy_pass http://ticsalud.cl; #for demo purposes
      }
      
-     ssl_certificate /etc/letsencrypt/live/ticsalud.cl/fullchain.pem;
-     ssl_certificate_key /etc/letsencrypt/live/ticsalud.cl/privkey.pem;
+     ssl_certificate /etc/letsencrypt/live/www.ticsalud.cl/fullchain.pem;
+     ssl_certificate_key /etc/letsencrypt/live/www.ticsalud.cl/privkey.pem;
      include /etc/letsencrypt/options-ssl-nginx.conf;
      ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
