agrego server option www13

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,7 +46,7 @@ http {
       location / {
           root   /usr/share/nginx/html;
           index  index.html index.htm;
-          return 301 https://$host$request_uri;
+          #return 301 https://$host$request_uri;
 
       }
 
